--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <!-- <meta name="theme-color" content="#161D3C" /> -->
   <meta name="description" content="Park here" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Park Here">
+  <meta name="apple-mobile-web-app-title" content="Park Here Business">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>PH</title>
+  <title>PHB</title>
 </head>
 
 <body>
